--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,3 +1,3 @@
 github: [11627685]
 patreon: 11627685
-custom: ["https://opencollective.com/easyofd", octocat.com]
+custom: ["https://opencollective.com/easyofd"]
