--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,3 +1,5 @@
-github: [11627685]
-patreon: 11627685
-custom: ["https://opencollective.com/easyofd"]
+github: [11627685@qq.com]
+patreon: easyofd
+custom: ["https://opencollective.com/easyofd", easyofd.cn]
+
+ 
