--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,5 +1,3 @@
-github: [11627685@qq.com]
+github: [easyofd, 11627685]
 patreon: easyofd
-custom: ["https://opencollective.com/easyofd", easyofd.cn]
-
- 
+custom: ["https://www.paypal.me/easyofd", easyofd.cn]
