--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,3 +1,3 @@
 github: [easyofd, 11627685]
-patreon: easyofd
-custom: ["https://www.paypal.me/easyofd", easyofd.cn]
+Open Collective: easyofd
+custom: ["https://www.paypal.me/easyofd"]
